// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DependencyCascadeMessage should cascade computed after updating a variable 1`] = `
Array [
  Object {
    "targetId": "COMPUTED#TestOne",
    "type": "DependencyCascade",
  },
  Object {
    "targetId": "COMPUTED#CascadeOne",
    "type": "DependencyCascade",
  },
  Object {
    "targetId": "COMPUTED#CascadeTwo",
    "type": "DependencyCascade",
  },
  Object {
    "targetId": "COMPUTED#TestTwo",
    "type": "DependencyCascade",
  },
]
`;

exports[`DependencyCascadeMessage should update a computed item and cascade 1`] = `
Array [
  Object {
    "ConditionCheck": Object {
      "ConditionExpression": "#value = :value",
      "ExpressionAttributeNames": Object {
        "#value": "value",
      },
      "ExpressionAttributeValues": Object {
        ":value": Object {
          "N": "1",
        },
      },
      "Key": Object {
        "DataCategory": Object {
          "S": "Meta::Variable",
        },
        "EphemeraId": Object {
          "S": "VARIABLE#VariableOne",
        },
      },
      "TableName": "Ephemera",
    },
  },
  Object {
    "ConditionCheck": Object {
      "ConditionExpression": "#value = :value",
      "ExpressionAttributeNames": Object {
        "#value": "value",
      },
      "ExpressionAttributeValues": Object {
        ":value": Object {
          "N": "2",
        },
      },
      "Key": Object {
        "DataCategory": Object {
          "S": "Meta::Variable",
        },
        "EphemeraId": Object {
          "S": "VARIABLE#VariableTwo",
        },
      },
      "TableName": "Ephemera",
    },
  },
  Object {
    "Update": Object {
      "ExpressionAttributeNames": Object {
        "#value": "value",
      },
      "ExpressionAttributeValues": Object {
        ":value": Object {
          "N": "3",
        },
      },
      "Key": Object {
        "DataCategory": Object {
          "S": "Meta::Computed",
        },
        "EphemeraId": Object {
          "S": "COMPUTED#TestOne",
        },
      },
      "TableName": "Ephemera",
      "UpdateExpression": "SET #value = :value",
    },
  },
]
`;

exports[`DependencyCascadeMessage should update a computed item and cascade 2`] = `
Array [
  Object {
    "targetId": "COMPUTED#TestTwo",
    "type": "DependencyCascade",
  },
  Object {
    "targetId": "COMPUTED#CascadeOne",
    "type": "DependencyCascade",
  },
  Object {
    "targetId": "COMPUTED#CascadeThree",
    "type": "DependencyCascade",
  },
  Object {
    "targetId": "COMPUTED#CascadeTwo",
    "type": "DependencyCascade",
  },
]
`;

exports[`DependencyCascadeMessage should update in parallel and combine cascades 1`] = `
Array [
  Object {
    "ConditionCheck": Object {
      "ConditionExpression": "#value = :value",
      "ExpressionAttributeNames": Object {
        "#value": "value",
      },
      "ExpressionAttributeValues": Object {
        ":value": Object {
          "N": "1",
        },
      },
      "Key": Object {
        "DataCategory": Object {
          "S": "Meta::Variable",
        },
        "EphemeraId": Object {
          "S": "VARIABLE#VariableOne",
        },
      },
      "TableName": "Ephemera",
    },
  },
  Object {
    "ConditionCheck": Object {
      "ConditionExpression": "#value = :value",
      "ExpressionAttributeNames": Object {
        "#value": "value",
      },
      "ExpressionAttributeValues": Object {
        ":value": Object {
          "N": "2",
        },
      },
      "Key": Object {
        "DataCategory": Object {
          "S": "Meta::Variable",
        },
        "EphemeraId": Object {
          "S": "VARIABLE#VariableTwo",
        },
      },
      "TableName": "Ephemera",
    },
  },
  Object {
    "Update": Object {
      "ExpressionAttributeNames": Object {
        "#value": "value",
      },
      "ExpressionAttributeValues": Object {
        ":value": Object {
          "N": "3",
        },
      },
      "Key": Object {
        "DataCategory": Object {
          "S": "Meta::Computed",
        },
        "EphemeraId": Object {
          "S": "COMPUTED#TestOne",
        },
      },
      "TableName": "Ephemera",
      "UpdateExpression": "SET #value = :value",
    },
  },
]
`;

exports[`DependencyCascadeMessage should update in parallel and combine cascades 2`] = `
Array [
  Object {
    "Update": Object {
      "ExpressionAttributeNames": Object {
        "#value": "value",
      },
      "ExpressionAttributeValues": Object {
        ":value": Object {
          "N": "8",
        },
      },
      "Key": Object {
        "DataCategory": Object {
          "S": "Meta::Computed",
        },
        "EphemeraId": Object {
          "S": "COMPUTED#TestTwo",
        },
      },
      "TableName": "Ephemera",
      "UpdateExpression": "SET #value = :value",
    },
  },
]
`;

exports[`DependencyCascadeMessage should update in parallel and combine cascades 3`] = `
Array [
  Object {
    "targetId": "COMPUTED#CascadeOne",
    "type": "DependencyCascade",
  },
  Object {
    "targetId": "COMPUTED#CascadeTwo",
    "type": "DependencyCascade",
  },
]
`;
